--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,18 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
 
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //paper db dependency
+    implementation 'io.github.pilgr:paperdb:2.7.2'
+
+    implementation 'com.github.f0ris.sweetalert:library:1.6.2'
+
+    implementation 'com.github.bumptech.glide:glide:4.13.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.1'
+
 }
